--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "fix": "eslint src --fix",
     "format": "prettier --write \"./**/*.{html,vue,ts,js,json,md}\"",
     "lint:eslint": "eslint src/**/*.{ts,vue} --cache --fix",
-    "lint:style": "stylelint src/**/*.{css,scss,vue} --cache --fix"
+    "lint:style": "stylelint src/**/*.{css,scss,vue} --cache --fix",
+    "prepare": "husky install"
   },
   "dependencies": {
     "vue": "^3.4.15"
@@ -24,6 +25,7 @@
     "eslint-plugin-vue": "^9.21.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "husky": "^8.0.0"
   }
 }
