--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@typescript-eslint/parser": "^7.0.1",
     "@vitejs/plugin-vue": "^5.0.3",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.21.1",
+    "husky": "^8.0.0",
+    "prettier": "^3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
-    "vue-tsc": "^1.8.27",
-    "husky": "^8.0.0"
+    "vue-tsc": "^1.8.27"
   }
 }
