--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.7",
     "element-plus": "^2.5.6",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
