--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.23.10",
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.2",
     "@types/js-cookie": "^3.0.6",
@@ -36,6 +37,8 @@
     "@vitejs/plugin-vue": "^5.0.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.21.1",
     "husky": "^8.0.0",
