--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
     "vite-plugin-svg-icons": "^2.0.1",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.8.27"
   }
 }
