--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@types/nprogress": "^0.2.3",
     "axios": "^1.6.7",
     "element-plus": "^2.5.6",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
