--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.7",
     "element-plus": "^2.5.6",
     "js-cookie": "^3.0.5",
+    "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
